--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,7 +11,14 @@ log4j.appender.CONSOLE_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %
 
 ## File appender
 log4j.appender.FILE_LOG=org.apache.log4j.FileAppender
-log4j.appender.FILE_LOG.Threshold=DEBUG, FILE_ERROR_LOG
+log4j.appender.FILE_LOG.Threshold=DEBUG
 log4j.appender.FILE_LOG.file=logs/debug.txt
 log4j.appender.FILE_LOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
+
+## File appender
+log4j.appender.FILE_ERROR_LOG=org.apache.log4j.FileAppender
+log4j.appender.FILE_ERROR_LOG.Threshold=ERROR
+log4j.appender.FILE_ERROR_LOG.file=logs/error.txt
+log4j.appender.FILE_ERROR_LOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE_ERROR_LOG.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
